--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "c3-angular",
-  "version": "1.3.1",
+  "name": "c3-angular-lc",
+  "version": "2.0.0",
   "description": "An angularjs directive to integrate c3.js within your angularjs project.",
-  "main": "c3-angular.js",
+  "main": "c3-angular-lc.js",
   "directories": {
     "example": "examples"
   },
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jettro/c3-angular-directive.git"
+    "url": "git://github.com/udaylead/c3-angular-directive.git"
   },
   "keywords": [
     "c3js",
